Allow required composer plugins
composer/installers

ERM30996

[REL1_35, REL1_35-4.2.x, REL1_39, master]

Change-Id: I88dfb9af40f26cc030f73b2c805e46258a66da9d

--- a/composer.json
+++ b/composer.json
@@ -31,5 +31,10 @@
 	},
 	"extra": {
 		"installer-name": "BlueSpiceSocialComments"
+	},
+	"config": {
+		"allow-plugins": {
+			"composer/installers": true
+		}
 	}
 }
